# brand_performance_report

./: .gitignore  LICENSE  Makefile  README.md  audit_entrypoint.py  pyproject.toml
transform/brand_performance/: .gitignore  dbt_project.yml  profiles.yml
transform/brand_performance/brand_performance_dagster/: pyproject.toml  setup.py
transform/brand_performance/brand_performance_dagster/brand_performance_dagster/: assets.py  definitions.py  project.py  schedules.py
transform/brand_performance/brand_performance_dagster/pipes/: config.py  dates.py  io.py  ko_sales.py  load_gold.py  mkt_sales.py
transform/brand_performance/ingestion/: clean_dirs.py  create_dates.py  ingest.py  pyproject.toml  update_gold.py
transform/brand_performance/ingestion/ingestion/: __get_path.py  clean_dirs.py  create_dates.py  ingest.py  update_gold.py
transform/brand_performance/ingestion/source_handlers/: log.py  pbi_csv.py
transform/brand_performance/macros/: geography_id.sql  platform_id.sql  subcat_id.sql  tm_id.sql
transform/brand_performance/macros/og_zero/: og_zero_match.sql
transform/brand_performance/macros/surrogate_keys/: brand_id.sql
transform/brand_performance/macros/tests/: dates_not_missing.sql  geography_not_missing.sql  platform_not_missing.sql  rows_not_missing.sql  unique_rows.sql
transform/brand_performance/macros/tm_brand_id/: get_brand_from_id.sql  get_tm_from_id.sql  product_id.sql  tm_brand_id.sql
transform/brand_performance/macros/tm_brand_match/: all_tm_match.sql  crystal_acqua_lia.sql  treat_cola_string.sql
transform/brand_performance/models/bronze/: mkt_sales.sql  schema.yml  sources.yml  tm_sales.sql
transform/brand_performance/models/dim/: brand_tm.sql  date.sql  dim_date.sql  dim_geography.sql  dim_platform.sql  dim_subcat.sql  dim_tm.sql  platform.sql  schema.yml  sources.yml
transform/brand_performance/models/gold/: ko_sales.sql  non_ko_sales.sql  schema.yml
transform/brand_performance/models/maps/: og_zero.sql  schema.yml
transform/brand_performance/models/silver/: converted_namelist.sql  ko_sales.sql  non_ko_sales.sql  schema.yml  std_brand_tm_name.sql  std_ogz.sql  test_std_ogz.sql
transform/brand_performance/models/tm_staging/: schema.yml  std_brand_tm_name.sql  std_ogz.sql
(+8 files in other folders)
