[project]
name = "brand-performance-report"
version = "0.1"
description = ""
authors = [
    {name = "Maiara Souza"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.1.3,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "dbt-core (>=1.9.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dbt-duckdb (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
